--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,10 @@ header {
     top: 0px;
 }
 
+span {
+    color: var(--dark-purple);
+}
+
 .titulo-mensagem {
     margin-bottom: 8px;
     color: var(--dark-purple);
@@ -87,7 +91,7 @@ header {
 .container-principal button {
     padding: 24px;
     font-size: 1em;
-    border-radius: 24px;
+    border-radius: 16px;
     margin-top: 18px;
     cursor: pointer;
 }
@@ -119,7 +123,7 @@ header {
     background-color: var(--bg-area);
     box-shadow: 0px 12px 16px 8px rgba(0, 0, 0, 0.08);
     padding: 32px 16px;
-    border-radius: 32px;
+    border-radius: 24px;
 }
 
 .container-mobile {
@@ -143,7 +147,7 @@ header {
     padding: 24px;
     margin: 24px auto;
     font-size: 1em;
-    border-radius: 24px;
+    border-radius: 16px;
     cursor: pointer;
     background-color: var(--bg-area);
     color: var(--dark-purple);
